--- a/esitys/index.html
+++ b/esitys/index.html
@@ -18,6 +18,15 @@
 			<div class="slides">
 				<section>Tehtäiskö tästä vähän komeempi esitys samontien</section>
 				<section>Tää olis  tulevaisuudessa kannsa aika paljon "ammattimaisempi" työkalu kuin power-vitun-point</section>
+				<section>
+					<p>Pittää olla node (v10 tai uuempi) ja npm</p>
+					<p>Asennus:</p>
+					<pre data-id="code-animation"><code data-line-numbers>
+						$ git clone https://github.com/hakimel/reveal.js.git esitys
+						$ cd esitys && npm install
+						$ npm start
+					</code></pre>
+				</section>
 			</div>
 		</div>
 
