--- a/esitys/index.html
+++ b/esitys/index.html
@@ -69,30 +69,48 @@
         </section>
 
         <section>
+          <h6>Erilaisia rajapintoja</h6>
+        </section>
+
+        <section>
           <section>
-            <h6>Erilaisia rajapintoja</h6>
+            <figure>
+              <img src="images/mb_logo.svg" style="height:30rem;" alt="http://seekvectorlogo.com/modbus-organization-inc-vector-logo-svg/">
+              <figcaption style="font-size: 1rem;">[1]</figcaption>
+            </figure>
           </section>
 
           <section>
-            <img src="images/mb_logo.svg" style="height:30rem;" alt="http://seekvectorlogo.com/modbus-organization-inc-vector-logo-svg/">
+            Tänne tulee lisätietoa modbusista
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <figure>
+              <img src="images/sunspec_logo.svg" alt="https://sunspec.org/media-center/" style="width:40rem;" >
+              <figcaption style="font-size: 1rem;">[2]</figcaption>
+            </figure>
           </section>
 
           <section>
-            <img src="images/sunspec_logo.svg" alt="https://sunspec.org/media-center/" style="width:40rem;" >
-            <h6>SunSpec Modbus</h6>
+            Niko kertoo sunspec Modbusista
           </section>
+        </section>
 
-          <section>
-            <h6>IEC 61850</h6>
-          </section>
+        <section>
+          <h6>IEC 61850</h6>
+        </section>
 
-          <section>
-            <h6>IEEE 1815 / Distributed Network Protocol 3</h6>
-          </section>
+        <section>
+          <h6>IEEE 1815 / Distributed Network Protocol 3</h6>
+        </section>
 
-          <section>
+        <section>
+          <figure>
             <img src="images/sgready.png" alt="https://upload.wikimedia.org/wikipedia/commons/8/8c/SG_Ready-Label.svg">
-          </section>
+            <figcaption style="font-size: 1rem;">[3]</figcaption>
+          </figure>
         </section>
 
         <section>
@@ -120,6 +138,11 @@
             <h6>Aurinkosähkön kustannustehokas hyödyntäminen</h6>
             <p>Tää dia taitaa olla Nikon hommia 🤔</p>
           </section>
+        </section>
+
+        <section>
+          <h6>lähteitä:</h6>
+          pistetään lähteet kun tiietään paremmin
         </section>
 
       </div>
