Presentation - interfaces almost done

--- a/esitys/index.html
+++ b/esitys/index.html
@@ -94,16 +94,45 @@
           </section>
 
           <section>
-            Niko kertoo sunspec Modbusista
+            <h6> SunSpec
+              <p>
+                SunSpec on SunSpec Alliancen määrittelemä standardi aurinkoinverttereille ja energiavarastoille.
+                <ul>
+                  <li>Toimii Modbus RTU ja TCP versioilla, lisäksi myös HTTP/XML:llä ja OPC:llä, mutta suurin käyttö on Modbusin avulla</li>
+                  <li>Perustuu IEC 61850 sähköasemastandardiin</li>
+                  <li>Mahdollistaa inverttereiden ja energiavarastoiden (etä)ohjauksen standardiin pohjautuvalla tiedonvaihdolla</li>
+                  <li>Suomalaisen aurinkosähköjärjestelmiä asentava Solarigon käyttämistä 5:stä valmistajasta kaikilla on mahdollista käyttää SunSpec Modbusia ohjauksessa</li>
+                </ul>
+              </p>
+            </h6>
+            
+            
+
           </section>
         </section>
 
         <section>
-          <h6>IEC 61850</h6>
+          <h6>IEC 61850
+            <p>
+              <ul>
+                <li>Sähköasemien standardi, jossa on määritelty esimerkiksi yleisiä tietomalleja laiteriippumattomuuden mahdollistamiseksi</li>
+                <li>61850-90-7 -laajennos sisältää myös funktioita inverttereitä varten, esimerkiksi verkkoa tukevia ominaisuuksia</li>
+                <li></li>
+              </ul>
+            </p>
+          </h6>
         </section>
 
         <section>
-          <h6>IEEE 1815 / Distributed Network Protocol 3</h6>
+          <h6>IEEE 1815 / Distributed Network Protocol 3
+            <p>
+              <ul>
+                <li>Suunniteltu alunperin sähköasemien automaatioon, mutta nykyisin käytössä myös vesiteollisuudessa</li>
+                <li>Markkinajohtaja sähköasemien kommunikaatiossa Pohjois-Amerikassa</li>
+                <li>Vuonna 2018 julkaistussa dokumentissa määriteltiin </li>
+              </ul>
+            </p>
+          </h6>
         </section>
 
         <section>
