Finished own interfaces, added stakeholders and comment

--- a/esitys/index.html
+++ b/esitys/index.html
@@ -35,12 +35,12 @@
         </section>
 
         <section>
-          <h6>Aurinkosähköjärjestelmät sähkön tuottajina</h6>
+          <h5>Aurinkosähköjärjestelmät sähkön tuottajina</h5>
         </section>
 
         <section>
           <section>
-            <h6>Lämpöpumput sähkön käyttäjinä</h6>
+            <h5>Lämpöpumput sähkön käyttäjinä</h5>
           </section>
 
           <section>
@@ -69,7 +69,7 @@
         </section>
 
         <section>
-          <h6>Erilaisia rajapintoja</h6>
+          <h5>Erilaisia rajapintoja</h5>
         </section>
 
         <section>
@@ -101,7 +101,7 @@
                   <li>Toimii Modbus RTU ja TCP versioilla, lisäksi myös HTTP/XML:llä ja OPC:llä, mutta suurin käyttö on Modbusin avulla</li>
                   <li>Perustuu IEC 61850 sähköasemastandardiin</li>
                   <li>Mahdollistaa inverttereiden ja energiavarastoiden (etä)ohjauksen standardiin pohjautuvalla tiedonvaihdolla</li>
-                  <li>Suomalaisen aurinkosähköjärjestelmiä asentava Solarigon käyttämistä 5:stä valmistajasta kaikilla on mahdollista käyttää SunSpec Modbusia ohjauksessa</li>
+                  <li>Suomalaisen aurinkosähköjärjestelmiä asentava Solarigon käyttämistä 5:stä valmistajasta kaikilla on mahdollista käyttää SunSpec Modbusia kommunikaatiossa</li>
                 </ul>
               </p>
             </h6>
@@ -115,9 +115,9 @@
           <h6>IEC 61850
             <p>
               <ul>
-                <li>Sähköasemien standardi, jossa on määritelty esimerkiksi yleisiä tietomalleja laiteriippumattomuuden mahdollistamiseksi</li>
-                <li>61850-90-7 -laajennos sisältää myös funktioita inverttereitä varten, esimerkiksi verkkoa tukevia ominaisuuksia</li>
-                <li></li>
+                <li>Sähköasemien standardi, jossa on määritelty esimerkiksi yleisiä tietomalleja uusiutuville energianlähteille laiteriippumattomuuden mahdollistamiseksi</li>
+                <li>61850-90-7 -laajennos sisältää myös toiminnallisia funktioita inverttereitä varten, esimerkiksi verkkoa tukevia ominaisuuksia</li>
+                <li>Suomessa laajasti käytössä sähköasemien automaatiossa</li>
               </ul>
             </p>
           </h6>
@@ -129,7 +129,7 @@
               <ul>
                 <li>Suunniteltu alunperin sähköasemien automaatioon, mutta nykyisin käytössä myös vesiteollisuudessa</li>
                 <li>Markkinajohtaja sähköasemien kommunikaatiossa Pohjois-Amerikassa</li>
-                <li>Vuonna 2018 julkaistussa dokumentissa määriteltiin </li>
+                <li>Vuonna 2018 julkaistussa dokumentissa määriteltiin IEC 61850:n määrittelemät toiminnalliset ominaisuudet myös tälle standardille. Samassa dokumentissa julkaistiin linkitys 61850-7-420 tietomalleihin.</li>
               </ul>
             </p>
           </h6>
@@ -143,14 +143,21 @@
         </section>
 
         <section>
-          <h6>Sidosryhmien tarpeet</h6>
+          <h5>Sidosryhmien tarpeet</h5>
+          <section>
+            Sidosryhmät
+            <ul>
+              <li>Fingrid</li>
+              <li>Verkonhaltija</li>
+              <li>Järjestelmän omistaja</li>
+              <li>Järjestelmätoimittaja</li>
+              <li>Aggregaattori</li>
+            </ul>
+          </section>
         </section>
 
         <section>
-          <section>
-            <h6>Sovellukset</h6>
-          </section>
-
+          <h5>Sovellukset</h5>
           <section>
             <h6>Etämonitorointi ja -ohjaus</h6>
           </section>
@@ -165,7 +172,7 @@
 
           <section>
             <h6>Aurinkosähkön kustannustehokas hyödyntäminen</h6>
-            <p>Tää dia taitaa olla Nikon hommia 🤔</p>
+            <p>Tää dia taitaa olla Nikon hommia 🤔 Mietin ite vähä onko tää itessään ees sovellus :/</p>
           </section>
         </section>
 
