Added PV-system pic, moving on with applications

--- a/esitys/index.html
+++ b/esitys/index.html
@@ -35,7 +35,16 @@
         </section>
 
         <section>
-          <h5>Aurinkosähköjärjestelmät sähkön tuottajina</h5>
+          <section>
+            <h5>Aurinkosähköjärjestelmät sähkön tuottajina</h5>
+          </section>
+
+          <section>
+            <figure>
+              <img src="images/PV_system_components.svg" alt="Aurinkosähköjärjestelmän komponentit" style="height: 10rem; background: white;">
+            </figure>
+          </section>
+          
         </section>
 
         <section>
@@ -158,16 +167,34 @@
 
         <section>
           <h5>Sovellukset</h5>
+
           <section>
             <h6>Etämonitorointi ja -ohjaus</h6>
+
+            <section>
+              <p>Monitorointi vain tila- tai historiatietojen tarkkailua, ohjaus sisältää lisäksi asetusarvojen muuttamista sekä järjestelmän käynnistämistä/pysäyttämistä.</p>
+              <ul>
+                <li>Asiakaspalvelu / laitteistohuolto</li>
+                <li>Verkon huoltotilanteet</li>
+                <li>Muiden sovellusten mahdollistaminen</li>
+              </ul>
+            </section>
           </section>
 
           <section>
-            <h6>Virtuaalivoimalat</h6>
-          </section>
+            <h6>Kysyntäjousto</h6>
+            <p>Keskitetty energiantuotanto - hajautettu energiantuotanto</p>
+            <p>Perustuotanto pienenee vanhojen laitosten poistuessa käytöstä</p>
+            
+            <section>
+              <h6>Virtuaalivoimalat</h6>
+              <p>Koostuu pienistä tuotantoyksiköistä tai yhdestä tai useammasta ohjattavasta kuormasta.</p>
+              <p>Akullisia aurinkosähköjärjestelmiä voidaan hyödyntää kuluttajana tai tuottajana, riippuen tarpeesta. Ne ovat myös nopeaa säätövoimaa, sillä teho on heti saatavissa akulta.</p>
+            </section>
 
-          <section>
-            <h6>huipputehon rajoittaminen</h6>
+            <section>
+              <h6>Huipputehon rajoittaminen</h6>
+            </section>
           </section>
 
           <section>
