--- a/esitys/index.html
+++ b/esitys/index.html
@@ -167,36 +167,34 @@
 
           <section>
             <h6>Etämonitorointi ja -ohjaus</h6>
-
-            <section>
-              <p>Monitorointi vain tila- tai historiatietojen tarkkailua, ohjaus sisältää lisäksi asetusarvojen muuttamista sekä järjestelmän käynnistämistä/pysäyttämistä.</p>
-              <ul>
-                <li>Asiakaspalvelu / laitteistohuolto</li>
-                <li>Verkon huoltotilanteet</li>
-                <li>Muiden sovellusten mahdollistaminen</li>
-              </ul>
-            </section>
+            <p>Monitorointi vain tila- tai historiatietojen tarkkailua, ohjaus sisältää lisäksi asetusarvojen muuttamista sekä järjestelmän käynnistämistä/pysäyttämistä.</p>
+            <ul>
+              <li>Asiakaspalvelu / laitteistohuolto</li>
+              <li>Verkon huoltotilanteet</li>
+              <li>Muiden sovellusten mahdollistaminen</li>
+            </ul>
           </section>
 
           <section>
             <h6>Kysyntäjousto</h6>
             <p>Keskitetty energiantuotanto - hajautettu energiantuotanto</p>
             <p>Perustuotanto pienenee vanhojen laitosten poistuessa käytöstä</p>
+          </section>
 
-            <section>
-              <h6>Virtuaalivoimalat</h6>
-              <p>Koostuu pienistä tuotantoyksiköistä tai yhdestä tai useammasta ohjattavasta kuormasta.</p>
-              <p>Akullisia aurinkosähköjärjestelmiä voidaan hyödyntää kuluttajana tai tuottajana, riippuen tarpeesta. Ne ovat myös nopeaa säätövoimaa, sillä teho on heti saatavissa akulta.</p>
-            </section>
+          <section>
+            <h6>Virtuaalivoimalat</h6>
+            <p>Koostuu pienistä tuotantoyksiköistä tai yhdestä tai useammasta ohjattavasta kuormasta.</p>
+            <p>Akullisia aurinkosähköjärjestelmiä voidaan hyödyntää kuluttajana tai tuottajana, riippuen tarpeesta. Ne ovat myös nopeaa säätövoimaa, sillä teho on heti saatavissa akulta.</p>
+          </section>
 
-            <section>
-              <h6>Huipputehon rajoittaminen</h6>
-            </section>
+          <section>
+            <h6>Huipputehon rajoittaminen</h6>
           </section>
 
           <section>
             <h6>Aurinkosähkön kustannustehokas hyödyntäminen</h6>
             <p>Tää dia taitaa olla Nikon hommia 🤔 Mietin ite vähä onko tää itessään ees sovellus :/</p>
+            <p>Sun pitää päättää se</p>
           </section>
         </section>
 
