Max power limit

--- a/esitys/index.html
+++ b/esitys/index.html
@@ -112,9 +112,6 @@
                   <li>Mahdollistaa inverttereiden ja energiavarastoiden (etä)ohjauksen standardiin pohjautuvalla tiedonvaihdolla</li>
                   <li>Suomalaisen aurinkosähköjärjestelmiä asentava Solarigon käyttämistä 5:stä valmistajasta kaikilla on mahdollista käyttää SunSpec Modbusia kommunikaatiossa</li>
                 </ul>
-            </h6>
-
-
 
           </section>
         </section>
@@ -191,6 +188,9 @@
 
             <section>
               <h6>Huipputehon rajoittaminen</h6>
+              <p>Verkko mitoitetaan huipputehon perusteella</p>
+              <p>Tulevaisuudessa mahdollisesti tehotariffit huipputehojen rajoittamiseksi</p>
+              <p>Tehon rajoittaminen pidemmän sähkökatkon jälkeen verkon kuormituksen pienentämiseksi</p>
             </section>
           </section>
 
