Cost-effective usage of PV-system + added building to stakeholder

--- a/esitys/index.html
+++ b/esitys/index.html
@@ -152,6 +152,7 @@
               <li>Verkonhaltija</li>
               <li>Järjestelmän omistaja</li>
               <li>Järjestelmätoimittaja</li>
+              <li>Kiinteistö (?)</li>
               <li>Aggregaattori</li>
             </ul>
           </section>
@@ -184,23 +185,19 @@
             <p>Akullisia aurinkosähköjärjestelmiä voidaan hyödyntää kuluttajana tai tuottajana, riippuen tarpeesta. Ne ovat myös nopeaa säätövoimaa, sillä teho on heti saatavissa akulta.</p>
           </section>
 
-<<<<<<< HEAD
             <section>
               <h6>Huipputehon rajoittaminen</h6>
               <p>Verkko mitoitetaan huipputehon perusteella</p>
               <p>Tulevaisuudessa mahdollisesti tehotariffit huipputehojen rajoittamiseksi</p>
               <p>Tehon rajoittaminen pidemmän sähkökatkon jälkeen verkon kuormituksen pienentämiseksi</p>
             </section>
-=======
-          <section>
-            <h6>Huipputehon rajoittaminen</h6>
->>>>>>> c1eb342560934fcd451cd2a77f5cb494f29b69e7
           </section>
 
           <section>
             <h6>Aurinkosähkön kustannustehokas hyödyntäminen</h6>
-            <p>Tää dia taitaa olla Nikon hommia 🤔 Mietin ite vähä onko tää itessään ees sovellus :/</p>
-            <p>Sun pitää päättää se</p>
+            <p>Aurinkosähkön myynnistä saatava korvaus pienempi kuin sähkön hinta kuluttajalle</p>
+            <p>Inverttereissä mahdollisuus ostaa lisävarusteena releohjaus</p>
+            <p>Kiinteistöautomaation hyödyntäminen asiassa vaatii erillisen (reaaliaikaisen) sähkömittarin</p>
           </section>
         </section>
 
