--- a/esitys/index.html
+++ b/esitys/index.html
@@ -12,6 +12,11 @@
 
     <!-- Theme used for syntax highlighted code -->
     <link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
+    <style>
+      p {
+        text-align: left;
+      }
+      </style>
   </head>
   <body>
     <div class="reveal">
@@ -78,10 +83,10 @@
         </section>
 
         <section>
-          <h5>Erilaisia rajapintoja</h5>
-        </section>
+          <section>
+            <h5>Erilaisia rajapintoja</h5>
+          </section>
 
-        <section>
           <section>
             <figure>
               <img src="images/mb_logo.svg" style="height:30rem;" alt="http://seekvectorlogo.com/modbus-organization-inc-vector-logo-svg/">
@@ -92,9 +97,7 @@
           <section>
             Tänne tulee lisätietoa modbusista
           </section>
-        </section>
 
-        <section>
           <section>
             <figure>
               <img src="images/sunspec_logo.svg" alt="https://sunspec.org/media-center/" style="width:40rem;" >
@@ -114,48 +117,46 @@
                 </ul>
 
           </section>
-        </section>
 
-        <section>
-          <h6>IEC 61850</h6>
-          <br>
-          <ul style="font-size: 2rem;">
-            <li>Sähköasemien standardi, jossa on määritelty esimerkiksi yleisiä tietomalleja uusiutuville energianlähteille laiteriippumattomuuden mahdollistamiseksi</li>
-            <li>61850-90-7 -laajennos sisältää myös toiminnallisia funktioita inverttereitä varten, esimerkiksi verkkoa tukevia ominaisuuksia</li>
-            <li>Suomessa laajasti käytössä sähköasemien automaatiossa</li>
-          </ul>
-        </section>
+          <section>
+            <h6>IEC 61850</h6>
+            <br>
+            <ul style="font-size: 2rem;">
+              <li>Sähköasemien standardi, jossa on määritelty esimerkiksi yleisiä tietomalleja uusiutuville energianlähteille laiteriippumattomuuden mahdollistamiseksi</li>
+              <li>61850-90-7 -laajennos sisältää myös toiminnallisia funktioita inverttereitä varten, esimerkiksi verkkoa tukevia ominaisuuksia</li>
+              <li>Suomessa laajasti käytössä sähköasemien automaatiossa</li>
+            </ul>
+          </section>
 
-        <section>
-          <h6>IEEE 1815 / Distributed Network Protocol 3</h6>
-          <br>
-          <ul style="font-size: 2rem;">
-            <li>Suunniteltu alunperin sähköasemien automaatioon, mutta nykyisin käytössä myös vesiteollisuudessa</li>
-            <li>Markkinajohtaja sähköasemien kommunikaatiossa Pohjois-Amerikassa</li>
-            <li>Vuonna 2018 julkaistussa dokumentissa määriteltiin IEC 61850:n määrittelemät toiminnalliset ominaisuudet myös tälle standardille. Samassa dokumentissa julkaistiin linkitys 61850-7-420 tietomalleihin.</li>
-          </ul>
-        </section>
+          <section>
+            <h6>IEEE 1815 / Distributed Network Protocol 3</h6>
+            <br>
+            <ul style="font-size: 2rem;">
+              <li>Suunniteltu alunperin sähköasemien automaatioon, mutta nykyisin käytössä myös vesiteollisuudessa</li>
+              <li>Markkinajohtaja sähköasemien kommunikaatiossa Pohjois-Amerikassa</li>
+              <li>Vuonna 2018 julkaistussa dokumentissa määriteltiin IEC 61850:n määrittelemät toiminnalliset ominaisuudet myös tälle standardille. Samassa dokumentissa julkaistiin linkitys 61850-7-420 tietomalleihin.</li>
+            </ul>
+          </section>
 
-        <section>
-          <figure>
-            <img src="images/sgready.png" alt="https://upload.wikimedia.org/wikipedia/commons/8/8c/SG_Ready-Label.svg">
-            <figcaption style="font-size: 1rem;">[3]</figcaption>
-          </figure>
+          <section>
+            <figure>
+              <img src="images/sgready.png" alt="https://upload.wikimedia.org/wikipedia/commons/8/8c/SG_Ready-Label.svg">
+              <figcaption style="font-size: 1rem;">[3]</figcaption>
+            </figure>
+          </section>
+
         </section>
 
         <section>
           <h5>Sidosryhmien tarpeet</h5>
-          <section>
-            Sidosryhmät
-            <ul>
-              <li>Fingrid</li>
-              <li>Verkonhaltija</li>
-              <li>Järjestelmän omistaja</li>
-              <li>Järjestelmätoimittaja</li>
-              <li>Kiinteistö (?)</li>
-              <li>Aggregaattori</li>
-            </ul>
-          </section>
+          <ul>
+            <li>Fingrid</li>
+            <li>Verkonhaltija</li>
+            <li>Järjestelmän omistaja</li>
+            <li>Järjestelmätoimittaja</li>
+            <li>Kiinteistö (?)</li>
+            <li>Aggregaattori</li>
+          </ul>
         </section>
 
         <section>
@@ -185,12 +186,11 @@
             <p>Akullisia aurinkosähköjärjestelmiä voidaan hyödyntää kuluttajana tai tuottajana, riippuen tarpeesta. Ne ovat myös nopeaa säätövoimaa, sillä teho on heti saatavissa akulta.</p>
           </section>
 
-            <section>
-              <h6>Huipputehon rajoittaminen</h6>
-              <p>Verkko mitoitetaan huipputehon perusteella</p>
-              <p>Tulevaisuudessa mahdollisesti tehotariffit huipputehojen rajoittamiseksi</p>
-              <p>Tehon rajoittaminen pidemmän sähkökatkon jälkeen verkon kuormituksen pienentämiseksi</p>
-            </section>
+          <section>
+            <h6>Huipputehon rajoittaminen</h6>
+            <p>Verkko mitoitetaan huipputehon perusteella</p>
+            <p>Tulevaisuudessa mahdollisesti tehotariffit huipputehojen rajoittamiseksi</p>
+            <p>Tehon rajoittaminen pidemmän sähkökatkon jälkeen verkon kuormituksen pienentämiseksi</p>
           </section>
 
           <section>
