--- a/esitys/index.html
+++ b/esitys/index.html
@@ -99,6 +99,16 @@
           </section>
 
           <section>
+            <h6>IEC 61850</h6>
+            <br>
+            <ul style="font-size: 2rem;">
+              <li>Sähköasemien standardi, jossa on määritelty esimerkiksi yleisiä tietomalleja uusiutuville energianlähteille laiteriippumattomuuden mahdollistamiseksi</li>
+              <li>61850-90-7 -laajennos sisältää myös toiminnallisia funktioita inverttereitä varten, esimerkiksi verkkoa tukevia ominaisuuksia</li>
+              <li>Suomessa laajasti käytössä sähköasemien automaatiossa</li>
+            </ul>
+          </section>
+
+          <section>
             <figure>
               <img src="images/sunspec_logo.svg" alt="https://sunspec.org/media-center/" style="width:40rem;" >
               <figcaption style="font-size: 1rem;">[2]</figcaption>
@@ -116,16 +126,6 @@
                   <li>Suomalaisen aurinkosähköjärjestelmiä asentava Solarigon käyttämistä 5:stä valmistajasta kaikilla on mahdollista käyttää SunSpec Modbusia kommunikaatiossa</li>
                 </ul>
 
-          </section>
-
-          <section>
-            <h6>IEC 61850</h6>
-            <br>
-            <ul style="font-size: 2rem;">
-              <li>Sähköasemien standardi, jossa on määritelty esimerkiksi yleisiä tietomalleja uusiutuville energianlähteille laiteriippumattomuuden mahdollistamiseksi</li>
-              <li>61850-90-7 -laajennos sisältää myös toiminnallisia funktioita inverttereitä varten, esimerkiksi verkkoa tukevia ominaisuuksia</li>
-              <li>Suomessa laajasti käytössä sähköasemien automaatiossa</li>
-            </ul>
           </section>
 
           <section>
@@ -148,15 +148,8 @@
         </section>
 
         <section>
-          <h5>Sidosryhmien tarpeet</h5>
-          <ul>
-            <li>Fingrid</li>
-            <li>Verkonhaltija</li>
-            <li>Järjestelmän omistaja</li>
-            <li>Järjestelmätoimittaja</li>
-            <li>Kiinteistö (?)</li>
-            <li>Aggregaattori</li>
-          </ul>
+          <h5>Sidosryhmät ja niiden tarpeet</h5>
+            <img src="images/sidosryhmat.svg">
         </section>
 
         <section>
