--- a/esitys/index.html
+++ b/esitys/index.html
@@ -13,8 +13,9 @@
     <!-- Theme used for syntax highlighted code -->
     <link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
     <style>
-      p {
+      p, li, td {
         text-align: left;
+        font-size: 2rem;
       }
       </style>
   </head>
@@ -58,11 +59,11 @@
           </section>
 
           <section>
-            <p>Lämpöpumpun toimintaperiaate</p>
+            <h6>Lämpöpumpun toimintaperiaate</h6>
             <img src="images/hp.svg" alt="Lämpöpumpun toimintaperiaate" style="height: 30rem; background: white;">
           </section>
 
-          <section style="font-size: 2.2rem">
+          <section>
             <p>Eri moottorityyppejä käytetään kompressorin pyörittämiseen</p>
             <table>
               <tr>
@@ -89,13 +90,28 @@
 
           <section>
             <figure>
-              <img src="images/mb_logo.svg" style="height:30rem;" alt="http://seekvectorlogo.com/modbus-organization-inc-vector-logo-svg/">
+              <img src="images/mb_logo.svg" style="height:10rem;" alt="http://seekvectorlogo.com/modbus-organization-inc-vector-logo-svg/">
               <figcaption style="font-size: 1rem;">[1]</figcaption>
             </figure>
+            <div>
+              <p>Automaatiossa käytetty palvelin–asiakas-mallin viestintäprotokolla.</p>
+              <p>Modicon aloitti kehityksen vuonna 1979. Nykyään Modbusia-standardia ylläpitää  Modbus Organization.</p>
+            </div>
           </section>
 
           <section>
-            Tänne tulee lisätietoa modbusista
+            <div>
+              <p>Kommunikointi perustuu asiakkaan lähettämiin määrämuotoisiin pyyntöihin.</p>
+              <p>Pyynnöillä voidaan luetaan tai muokataan palvelinlaitteella sijaitsevien rekistereitä.</p>
+            </div>
+            <img src="images/client_server.svg" style="background: white; padding: 1rem;">
+          </section>
+
+          <section>
+            <figure>
+              <img src="images/mb_stack.png" alt="">
+              <figcaption style="font-size: 2rem;">Modbus-protokollan rakenne. [100]</figcaption>
+            </figure>
           </section>
 
           <section>
@@ -115,12 +131,12 @@
             </figure>
           </section>
 
-          <section style="font-size: 2rem;">
+          <section>
               <p>
                 SunSpec on SunSpec Alliancen määrittelemä standardi aurinkoinverttereille ja energiavarastoille.
               </p>
                 <ul>
-                  <li>Toimii Modbus RTU ja TCP versioilla, lisäksi myös HTTP/XML:llä ja OPC:llä, mutta suurin käyttö on Modbusin avulla</li>
+                  <li>Toimii Modbus-protokollan ylitse, HTTP/XML:llä ja OPC:llä, mutta suurin käyttö on Modbusin avulla</li>
                   <li>Perustuu IEC 61850 sähköasemastandardiin</li>
                   <li>Mahdollistaa inverttereiden ja energiavarastoiden (etä)ohjauksen standardiin pohjautuvalla tiedonvaihdolla</li>
                   <li>Suomalaisen aurinkosähköjärjestelmiä asentava Solarigon käyttämistä 5:stä valmistajasta kaikilla on mahdollista käyttää SunSpec Modbusia kommunikaatiossa</li>
@@ -131,7 +147,7 @@
           <section>
             <h6>IEEE 1815 / Distributed Network Protocol 3</h6>
             <br>
-            <ul style="font-size: 2rem;">
+            <ul>
               <li>Suunniteltu alunperin sähköasemien automaatioon, mutta nykyisin käytössä myös vesiteollisuudessa</li>
               <li>Markkinajohtaja sähköasemien kommunikaatiossa Pohjois-Amerikassa</li>
               <li>Vuonna 2018 julkaistussa dokumentissa määriteltiin IEC 61850:n määrittelemät toiminnalliset ominaisuudet myös tälle standardille. Samassa dokumentissa julkaistiin linkitys 61850-7-420 tietomalleihin.</li>
@@ -143,6 +159,15 @@
               <img src="images/sgready.png" alt="https://upload.wikimedia.org/wikipedia/commons/8/8c/SG_Ready-Label.svg">
               <figcaption style="font-size: 1rem;">[3]</figcaption>
             </figure>
+            <p>Saksalainen lämpöpuppuyhdistys BWP</p>
+            <p>Määrittelee neljä toimintatilaa</p>
+          </section>
+
+          <section>
+              <figure style="display: inline;">
+                <img src="images/sg_modes.png" alt="">
+                <figcaption style="font-size: 2rem;">SG-Ready-toimintatilat. Perustuu lähteeseen [100].</figcaption>
+              </figure>
           </section>
 
         </section>
@@ -177,6 +202,7 @@
             <h6>Virtuaalivoimalat</h6>
             <p>Koostuu pienistä tuotantoyksiköistä tai yhdestä tai useammasta ohjattavasta kuormasta.</p>
             <p>Akullisia aurinkosähköjärjestelmiä voidaan hyödyntää kuluttajana tai tuottajana, riippuen tarpeesta. Ne ovat myös nopeaa säätövoimaa, sillä teho on heti saatavissa akulta.</p>
+            <p>Lämpöpumppupoolia ohjaamalla voidaan hydyntää lämmitettävien kohteiden lämmönvarastointikykyä.</p>
           </section>
 
           <section>
