--- a/esitys/index.html
+++ b/esitys/index.html
@@ -30,12 +30,12 @@
         </section>
 
         <section>
-          <h6>Kandidaattiseminaarityön sisältö</h6>
+          <h6>Kandidaatintyön sisältö</h6>
             <ul>
-              <li>Aurinkosähköinvertterin toiminta</li>
-              <li>Lämpöpumpun toiminta</li>
-              <li>Rapinnat eri abstraktiotasoilla</li>
-              <li>Sidosryhmät</li>
+              <li>Aurinkosähköjärjestelmät sähkön tuottajina</li>
+              <li>Lämpöpumput sähkön käyttäjinä</li>
+              <li>Rajapinnat – eri abstraktiotasot</li>
+              <li>Sidosryhmät ja niiden tarpeet rajapintojen näkökulmasta</li>
               <li>Sovellukset</li>
             </ul>
         </section>
@@ -95,14 +95,14 @@
             </figure>
             <div>
               <p>Automaatiossa käytetty palvelin–asiakas-mallin viestintäprotokolla.</p>
-              <p>Modicon aloitti kehityksen vuonna 1979. Nykyään Modbusia-standardia ylläpitää  Modbus Organization.</p>
+              <p>Modicon aloitti kehityksen vuonna 1979. Nykyään Modbus-standardia ylläpitää Modbus Organization.</p>
             </div>
           </section>
 
           <section>
             <div>
               <p>Kommunikointi perustuu asiakkaan lähettämiin määrämuotoisiin pyyntöihin.</p>
-              <p>Pyynnöillä voidaan luetaan tai muokataan palvelinlaitteella sijaitsevien rekistereitä.</p>
+              <p>Pyynnöillä voidaan lukea tai muokata palvelinlaitteella sijaitsevien rekistereitä.</p>
             </div>
             <img src="images/client_server.svg" style="background: white; padding: 1rem;">
           </section>
@@ -173,7 +173,7 @@
         </section>
 
         <section>
-          <h5>Sidosryhmät ja niiden tarpeet</h5>
+          <h5>Sidosryhmät ja niiden tarpeet rajapintojen näkökulmasta</h5>
             <img src="images/sidosryhmat.svg">
         </section>
 
@@ -202,13 +202,13 @@
             <h6>Virtuaalivoimalat</h6>
             <p>Koostuu pienistä tuotantoyksiköistä tai yhdestä tai useammasta ohjattavasta kuormasta.</p>
             <p>Akullisia aurinkosähköjärjestelmiä voidaan hyödyntää kuluttajana tai tuottajana, riippuen tarpeesta. Ne ovat myös nopeaa säätövoimaa, sillä teho on heti saatavissa akulta.</p>
-            <p>Lämpöpumppupoolia ohjaamalla voidaan hydyntää lämmitettävien kohteiden lämmönvarastointikykyä.</p>
+            <p>Lämpöpumppupoolia ohjaamalla voidaan hyödyntää lämmitettävien kohteiden lämmönvarastointikykyä.</p>
           </section>
 
           <section>
             <h6>Huipputehon rajoittaminen</h6>
             <p>Verkko mitoitetaan huipputehon perusteella</p>
-            <p>Tulevaisuudessa mahdollisesti tehotariffit huipputehojen rajoittamiseksi</p>
+            <p>Mahdolliset tehotariffit huipputehojen rajoittamiseksi</p>
             <p>Tehon rajoittaminen pidemmän sähkökatkon jälkeen verkon kuormituksen pienentämiseksi</p>
           </section>
 
