kaksi hianoo kuvaa

--- a/esitys/index.html
+++ b/esitys/index.html
@@ -17,6 +17,9 @@
         text-align: left;
         font-size: 2rem;
       }
+      .lahde {
+        font-size: 1rem;
+      }
       </style>
   </head>
   <body>
@@ -86,11 +89,12 @@
         <section>
           <section>
             <h5>Erilaisia rajapintoja</h5>
+            <img src="images/rajapinnat.svg" alt="">
           </section>
 
           <section>
             <figure>
-              <img src="images/mb_logo.svg" style="height:10rem;" alt="http://seekvectorlogo.com/modbus-organization-inc-vector-logo-svg/">
+              <img src="images/mb_logo.svg" style="height:10rem;" alt="">
               <figcaption style="font-size: 1rem;">[1]</figcaption>
             </figure>
             <div>
@@ -110,7 +114,7 @@
           <section>
             <figure>
               <img src="images/mb_stack.png" alt="">
-              <figcaption style="font-size: 2rem;">Modbus-protokollan rakenne. [100]</figcaption>
+              <figcaption style="font-size: 2rem;">Modbus-protokollan rakenne. [3]</figcaption>
             </figure>
           </section>
 
@@ -126,7 +130,7 @@
 
           <section>
             <figure>
-              <img src="images/sunspec_logo.svg" alt="https://sunspec.org/media-center/" style="width:40rem;" >
+              <img src="images/sunspec_logo.svg" style="width:40rem;" >
               <figcaption style="font-size: 1rem;">[2]</figcaption>
             </figure>
           </section>
@@ -222,7 +226,9 @@
 
         <section>
           <h6>lähteitä:</h6>
-          pistetään lähteet kun tiietään paremmin
+          <p class="lahde">[1] http://seekvectorlogo.com/modbus-organization-inc-vector-logo-svg/</p>
+          <p class="lahde">[2] https://sunspec.org/media-center/</p>
+          <p class="lahde">[3] MODBUS Application Protocol Specification V1.1b3. Modbus Organization.</p>
         </section>
 
       </div>
