--- a/esitys/index.html
+++ b/esitys/index.html
@@ -29,7 +29,8 @@
 
         <section>
           <h3>LÄMPÖPUMPPUJEN JA AURINKOSÄHKÖJÄRJESTELMIEN KOMMUNIKAATIORAJAPINNAT JA NIIDEN HYÖDYNTÄMISMAHDOLLISUUDET</h3>
-          <p>Ilmari Marttila ja Niko Kangasniemi</p>
+          <br>
+          <p style="text-align: center;">Ilmari Marttila ja Niko Kangasniemi</p>
         </section>
 
         <section>
@@ -168,9 +169,9 @@
           </section>
 
           <section>
-              <figure style="display: inline;">
+              <figure>
                 <img src="images/sg_modes.png" alt="">
-                <figcaption style="font-size: 2rem;">SG-Ready-toimintatilat. Perustuu lähteeseen [100].</figcaption>
+                <figcaption style="font-size: 2rem;">SG-Ready-toimintatilat. Perustuu lähteeseen [4].</figcaption>
               </figure>
           </section>
 
@@ -229,6 +230,7 @@
           <p class="lahde">[1] http://seekvectorlogo.com/modbus-organization-inc-vector-logo-svg/</p>
           <p class="lahde">[2] https://sunspec.org/media-center/</p>
           <p class="lahde">[3] MODBUS Application Protocol Specification V1.1b3. Modbus Organization.</p>
+          <p class="lahde">[4] Regularien Vergabe SG-Ready V 2.0. Bundesverband Wärmepumpe e.V. URL : https://www.waermepumpe.de/sg-ready/.</p
         </section>
 
       </div>
