--- a/esitys/index.html
+++ b/esitys/index.html
@@ -200,7 +200,7 @@
           <section>
             <h6>Kysyntäjousto</h6>
             <p>Keskitetty energiantuotanto - hajautettu energiantuotanto</p>
-            <p>Perustuotanto pienenee vanhojen laitosten poistuessa käytöstä</p>
+            <p>Erillistuotannossa käytettävien lauhdeviomaloiden määrä vähenee.</p>
           </section>
 
           <section>
